# ci-template

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.ci/: build_and_test.sh  commit_coveralls.sh  commit_coverity_scan.sh  init_thirdparty.sh  setup_compiler.sh
examples/: CMakeLists.txt  example1.cpp
include/ci/: api.hpp
include/cit/: api.hpp
test/: CMakeLists.txt  api.cpp
